<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GPS Wake up</string>
    <string name="apikey">0Mtc-56wn9-eof-R9rn4hJM_jdCSDyJU2H3J3pA</string>
    <string name="apikey2">0Mtc-56wn9-dfojDfLT-LbR9R2phIjTuHZnYySA</string>
    <string name="apikey_release">0Mtc-56wn9-d2UtMLBC3Dz3Zr2bTTjE60Jv9xdQ</string>
    <string name="title_activity_main">GPS Wake up!</string>
    <string name="title_activity_edit_alarm">Modifier l\'alarme</string>
    <string name="title_activity_add_alarm">Ajouter l\'alarme</string>
    <string name="title_help">Aide</string>
    <string name="title_activity_wakeup_list">Liste des alarmes</string>
    <string name="recherche_hint">Rechercher une adresse</string>
    <string name="menu_search">Recherche</string>
    <string name="menu_gps_enable">GPS disponible</string>
    <string name="menu_gps_disable">GPS indisponible</string>
    <string name="menu_help">Aide</string>
    <string name="menu_list">Liste</string>
    <string name="menu_save">Sauver</string>
    <string name="toast_no_connection">Aucune connection internet détéctée.</string>
    <string name="toast_search_finish">Recherche terminée.</string>
    <string name="toast_no_result">Aucun résultat.</string>
    <string name="toast_search_error">Erreur lors de la recherche.</string>
    <string name="toast_insert">Alarme ajoutée.</string>
    <string name="toast_edit">Alarme modifiée.</string>
    <string name="toast_delete_error">Supression impossible.</string>
    <string name="toast_delete">Alarme supprimée.</string>
    <string name="toast_no_provider">Aucun fournisseur de localisation activé. Impossible de démarrer le service d\'alarme GPSWakup.</string>
    <string name="dialog_modify">Modifier l\'alarme ?</string>
    <string name="dialog_add">Ajouter une alarme</string>
    <string name="dialog_btn_modify">Modifier</string>
    <string name="dialog_btn_cancel">Annuler</string>
    <string name="dialog_btn_stop">Stop</string>
    <string name="dialog_btn_add">Ajouter</string>
    <string name="dialog_btn_close">Fermer</string>
    <string name="edit_name">Nom de l\'alarme</string>
    <string name="edit_distance">Distance</string>
    <string name="edit_vibrator">Vibreur</string>
    <string name="edit_ringtone">Sonnerie</string>
    <string name="edit_volume">Volume</string>
    <string name="context_menu_edit">Modifier</string>
    <string name="context_menu_delete">Supprimer</string>
    <string name="txt_choose_ring_tone">Choisir une sonnerie</string>
    <string name="txt_enabled_alarms">Alarmes actives</string>
    <string name="txt_disabled_alarms">Alarmes inactives</string>
    <string name="txt_searches">Recherches</string>
    <string name="txt_modify_alarms">Un clique sur une alarme active ou inactive permet de la modifier.</string>
    <string name="txt_alarms_list">Accès aux alarmes sauvées</string>
    <string name="txt_search_addesses">Rechercher une adresse</string>
    <string name="txt_gps_options">Options de localisation</string>
    <string name="txt_map_longpress">Un long clique sur la carte permet aussi d\'ajouter une alarme.</string>
    <string name="txt_list_longpress">Dans la liste d\'alarmes, un long clique permet de modifier / supprimer une alarme.</string>
</resources>